--- a/styles/home.css
+++ b/styles/home.css
@@ -119,7 +119,7 @@
   margin-bottom: 3%;
 }
 .highlight-banner-section {
-  background-image: url("/assets/banners/home-banner-two-web.jpg");
+  background-image: url("../assets/banners/home-banner-two-web.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   /* background-attachment: fixed; */
@@ -172,7 +172,7 @@
     margin: 0 auto;
   }
   .highlight-banner-section {
-    background-image: url("/assets/banners/home-banner-two-mob.png");
+    background-image: url("../assets/banners/home-banner-two-mob.png");
     aspect-ratio: 390 / 500;
   }
   .gym-interiors .gym-location p {
