--- a/styles/home.css
+++ b/styles/home.css
@@ -119,11 +119,12 @@
   margin-bottom: 3%;
 }
 .highlight-banner-section {
-  background-image: url("../assets/banners/home-banner-two-web.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  /* background-attachment: fixed; */
   aspect-ratio: 1920 / 500;
+}
+.highlight-banner-section img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .testimonials .img-wrapper {
@@ -173,7 +174,6 @@
     margin: 0 auto;
   }
   .highlight-banner-section {
-    background-image: url("../assets/banners/home-banner-two-mob.png");
     aspect-ratio: 390 / 500;
   }
   .gym-interiors .gym-location p {
