--- a/styles/gym-page.css
+++ b/styles/gym-page.css
@@ -45,6 +45,8 @@
 .services-row img {
   display: block;
   width: 100%;
+  height: 100%;
+  object-fit: cover;
   border: 2px solid #fefe00;
 }
 .service-text-wrapper {
